[package]
edition = "2021"
name = "rs-docker-api"
description = "Docker Remote API in Rust"
version = "0.0.63"
authors = ["Jan Peters"]
license = "Apache-2.0"
homepage = "https://github.com/ianhpete/rust-docker-api"
repository = "https://github.com/ianhpete/rust-docker-api.git"
documentation = "https://ghmlee.github.io/rust-docker/doc/docker"
readme = "README.md"
keywords = ["docker"]
exclude = [".idea"]

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
hyper = "0.14.9"
hyperlocal = "0.8.0"
futures = "0.3.15"
tokio = "1.7.0"
