[package]
edition = "2018"
name = "rs-docker-api"
description = "Docker Remote API in Rust"
version = "0.0.64"
authors = ["Jan Peters <ianhpete@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ianhpete/rust-docker-api"
repository = "https://github.com/ianhpete/rust-docker-api"
documentation = "https://ghmlee.github.io/rust-docker/doc/docker"
readme = "README.md"
keywords = ["docker"]
exclude = [".idea"]

[dependencies]
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
hyper = "0.12.34"
hyperlocal = "0.6.0"
futures = "0.1.29"
tokio = "0.1.22"
tokio-core = "0.1.17"
